src/test/ui/stmt_expr_attrs_no_feature.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:14:5
   |
LL |     #[rustfmt::skip]
   |     ^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:25:9
   |
LL |         #![rustc_dummy]
   |         ^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:28:13
   |
LL |     let _ = #[allow(unused_variables)] {};
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:106:18
   |
LL |     fn y(a: [u8; #[rustc_dummy] 5]);
   |                  ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:113:19
   |
LL |     const Y: u8 = #[rustc_dummy] 5;
   |                   ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:119:19
   |
LL |     const Y: [u8; #[rustc_dummy] 5];
   |                   ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:125:18
   |
LL |     field2: [u8; #[rustc_dummy] 5]
   |                  ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:130:10
   |
LL |     [u8; #[rustc_dummy] 5]
   |          ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:136:14
   |
LL |         [u8; #[rustc_dummy] 5]
   |              ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:141:22
   |
LL |         field2: [u8; #[rustc_dummy] 5]
   |                      ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/stmt_expr_attrs_no_feature.rs:149:14
   |
LL |         6 => #[rustc_dummy] (),
   |              ^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0658`.
